进一步代码清理, 统一了Logger, 修改了部分代码里出现的隐患, 优化实现逻辑